<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/backgroundm"
    >


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/informacion0"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView2"
        android:layout_marginRight="10dp"
        android:textColor="#14F"
        android:shadowColor="#FFF"
        android:shadowRadius="2"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/informacion1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView3"
        android:layout_marginRight="10dp"
        android:textColor="#FFF"
        android:shadowColor="#000"
        android:shadowRadius="2"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/informacion2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView4"
        android:layout_marginRight="10dp"
        android:textColor="#000"
        android:shadowColor="#FFF"
        android:shadowRadius="2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/informacion3"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:id="@+id/textView5"
        android:textColor="#FFF"
        android:shadowColor="#000"
        android:shadowRadius="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/informacion4"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:id="@+id/textView6"
        android:textColor="#FFF"
        android:shadowColor="#000"
        android:shadowRadius="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/informacion5"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView7"
        android:textColor="#FFF"
        android:shadowColor="#000"
        android:shadowRadius="3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/informacion6"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView8"
        android:textColor="#FFF"
        android:shadowColor="#000"
        android:shadowRadius="2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
            >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IBcorreo"
            android:src="@drawable/correo"
            android:background="@null"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IBinstagram"
            android:src="@drawable/instagram"
            android:layout_marginLeft="5dp"
            android:background="@null"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IBtwitter"
            android:src="@drawable/twitter"
            android:layout_marginLeft="5dp"
            android:background="@null"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IBweb"
            android:src="@drawable/explorador"
            android:layout_marginLeft="5dp"
            android:background="@null"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Informacion7"
        android:textColor="#11F"
        android:shadowColor="#FFF"
        android:shadowRadius="1"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Informacion8"
        android:textColor="#FFF"
        android:shadowColor="#000"
        android:shadowRadius="2"
        />

    </LinearLayout>
</ScrollView>